--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -1,49 +1,44 @@
 .bookInfo {
     font-size: 1.3em;
-    color: white;
-    text-shadow: 2px 2px #171717;
-    background-color: #2f4353;
-    background-image: linear-gradient(315deg, #2f4353 0%, #d2ccc4 74%);
+    background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
 }
-
 .review {
     font-size: 1.3em;
-    color: white;
-    text-shadow: 2px 2px #171717;
-    background-image: linear-gradient(315deg, #2f4353, #d2ccc4);
+    background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
 }
-
 .form-control {
     font-size: 1.1em;
 }
-
 .reviews {
     color: black;
     font-size: 1em;
     text-shadow: none;
 }
-
 .assignBtn {
     bottom: 15px;
     right: 30px;
 }
-
 .form-control {
     resize: none;
 }
-
 .alert {
     text-shadow: none;
     background-color: rgba(255, 46, 46, 0.45);
     border-color: #c00;
 }
-
-.table {
-    color: white;
-    text-shadow: 2px 2px #171717;
-    border: none;
+table.table > tbody > tr > td, table.table > tbody > tr > th {
+    border-top: 2px solid #708090;
+    border-bottom: 2px solid #708090;
 }
-
+.btn-primary {
+    background-color: #fce043;
+    background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
+    border: none;
+    color: black;
+}
+h2#no-review {
+    display: block;
+}
 #navbar {
     justify-content: space-between;
 }
