--- a/src/main/resources/templates/personalCab.html
+++ b/src/main/resources/templates/personalCab.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="utf-8">
     <title>Book Sharing</title>
@@ -12,11 +11,18 @@
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/personalCab.css}" type="text/css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/chat.css}">
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <img alt="logo" height="60px" th:src="@{/images/logo.png}" width="180px"/>
+    <a href="/all-books"><img th:src="@{/images/logo.png}" alt="logo" height="60px" width="180px"/></a>
+    <div class="dropdown"><button id="btn-upgrade" type="button" data-toggle="dropdown"><div><span id="name" sec:authentication="principal.username"></span> </div></button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/all-books">HomePage</a></li>
+            <li role="presentation" class="presentation"><a role="menuitem" tabindex="-1" href="/logout">Logout</a></li>
+        </ul>
+    </div>
 </nav>
 
 <div class="container-fluid" style="margin-top: -25px">
@@ -61,10 +67,14 @@
         <div class="col"><br></div>
     </div>
 </div>
+<div th:insert="allBooksPage :: chat-page">
+</div>
 <!--Footer-->
 <div class="jumbotron text-center" style="margin-bottom:0"></div>
 <!--JS Script-->
-
 <script th:src="@{/scripts/personalCabinet.js}"></script>
+<script th:src="@{/scripts/chat.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </body>
 </html>
