--- a/src/main/resources/static/css/personalCab.css
+++ b/src/main/resources/static/css/personalCab.css
@@ -1,29 +1,223 @@
 .col {
     background-color: floralwhite;
 }
+
 .col-7 {
     align-content: center;
     text-align: center;
 }
+
 .col-2 {
     align-content: center;
     text-align: center;
     background-color: floralwhite;
 }
+
 .user {
     width: 100px;
     height: 85px;
     border-radius: 50%;
 }
-.assignedBooksHeader{
+
+.assignedBooksHeader {
     text-align: left;
     margin-left: 410px;
 }
-.navbar{
+
+.navbar {
     display: flex;
     justify-content: space-between;
 }
 
+#extend-open {
+    margin-top: 22%;
+    left: 37%;
+    transform: translate(-50%, -50%);
+    outline: none;
+}
 
+.extend-button {
+    background: none;
+    color: black;
+    border: 2px solid black;
+    text-transform: uppercase;
+    padding: 20px;
+    margin: 10px;
+    cursor: pointer;
+    transition: color 0.4s linear;
+    position: relative;
+    outline: none;
+}
 
+.extend-button:hover {
+    outline: none;
+    border: none;
+    color: #fff;
+}
 
+.extend-button::before {
+    outline: none;
+    content: "";
+    border: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
+    z-index: -1;
+    transition: transform 0.5s;
+    transform-origin: 0 0;
+    transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+}
+
+.extend1::before {
+    outline: none;
+    border: none;
+    transform: scaleX(0);
+}
+
+.extend1:hover::before {
+    outline: none;
+    transform: scaleX(1);
+    border: none;
+}
+
+.buton-submit {
+    outline: none;
+    background: none;
+    color: black;
+    border: 2px solid black;
+    text-transform: uppercase;
+    padding: 10px 30px;
+    min-width: 175px;
+    margin: 27px;
+    font-size: 16px;
+    transition: color 0.2s linear;
+    position: relative;
+}
+
+.buton-submit:hover {
+    outline: none;
+    color: white;
+    background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
+    border: 2px solid black;
+}
+
+.modal-footer {
+    justify-content: center;
+    padding: 0px;
+    border-top: 3px solid #708090;
+}
+
+.modal-header {
+    background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
+    justify-content: center;
+    padding: 2rem;
+}
+
+.modal-body {
+    padding: 2rem;
+}
+
+.input-group-prepend {
+    margin-right: 4px;
+}
+
+.input-group-text {
+    text-transform: uppercase;
+    background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
+    color: white;
+    width: 101px;
+    justify-content: center;
+}
+
+.input-group {
+    width: 100%;
+    height: 125px;
+}
+
+.form-control {
+    border: 3px solid #708090;
+    resize: none;
+    border-radius: 10px;
+    color: #171717;
+}
+
+.calendar-assign {
+    width: 329px;
+    margin-left: 4px;
+    background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
+    padding: 25px;
+    border-radius: 10px;
+    border: 3px solid #708090;
+}
+
+.calendar-assign .input-data-calendar {
+    justify-content: center;
+    display: flex;
+}
+
+.calendar-assign .input-data-calendar input {
+    color: black;
+    outline: none;
+    font-size: 20px;
+    border-radius: 6px;
+    background-color: white;
+    height: 60px;
+    width: 100%;
+    border: none;
+}
+
+.input-group > .custom-select:not(:first-child), .input-group > .form-control:not(:first-child) {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.input-group > .input-group-append:last-child > .btn:not(:last-child):not(.dropdown-toggle),
+.input-group > .input-group-append:last-child > .input-group-text:not(:last-child),
+.input-group > .input-group-append:not(:last-child) > .btn,
+.input-group > .input-group-append:not(:last-child) > .input-group-text, .input-group > .input-group-prepend > .btn,
+.input-group > .input-group-prepend > .input-group-text {
+    border-radius: 10px;
+}
+
+#messageSucces {
+    text-transform: uppercase;
+    display: none;
+    color: green;
+    text-align: center;
+    font-size: 15px;
+}
+
+#messageError {
+    text-transform: uppercase;
+    display: none;
+    color: red;
+    text-align: center;
+    font-size: 15px;
+}
+
+.h3, h3 {
+    font-size: 20px;
+}
+
+img#succesImage, img#errorImage {
+    width: 79px;
+    vertical-align: middle;
+    border-style: none;
+}
+
+.alert {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.input-group > .custom-file, .input-group > .custom-select, .input-group > .form-control,
+.input-group > .form-control-plaintext {
+    color: black;
+}
+
+.alert {
+    margin-bottom: 20px;
+}
