--- a/src/main/resources/templates/personalCab.html
+++ b/src/main/resources/templates/personalCab.html
@@ -69,6 +69,56 @@
 </div>
 <div th:insert="allBooksPage :: chat-page">
 </div>
+
+<!-- Modal -->
+<div aria-hidden="true" aria-labelledby="exampleModalLabel" class="modal fade" id="exampleModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">EXTEND TIME REQUEST</h5>
+            </div>
+            <div class="modal-body" id="modalForSubmitAndError">
+
+                <div class="input-group mb-4">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">new due <br> date</span>
+                        <div class="calendar-assign">
+                            <div class="input-data-calendar">
+                                <input id="setDate" type="date" >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Extend <br> reason</span>
+                    </div>
+                    <textarea class="form-control" id="textArea"></textarea>
+                </div>
+            </div>
+            <div class="mt-2" id="invalidReason"></div>
+
+            <div class="modal-body" id="messageSucces">
+                <h3>your request was sent <br> successfully !</h3>
+                <img id="succesImage" src="/images/check.png"/>
+            </div>
+
+            <div class="modal-body" id="messageError">
+                <h3>invalid input <br> please try again !</h3>
+                <img id="errorImage" src="/images/error.png"/>
+            </div>
+
+            <div class="modal-footer">
+                <button class="buton-submit" data-dismiss="modal" id="close" onclick="clearTextArea()" type="button">
+                    ClOSE
+                </button>
+                <button class="buton-submit" id="submit" onclick="submitRequest()"> SUBMIT</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--Footer-->
 <div class="jumbotron text-center" style="margin-bottom:0"></div>
 <!--JS Script-->
