--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -42,6 +42,7 @@
                             <tr id="book-language"></tr>
                             <tr id="book-pages"></tr>
                             <tr id="book-description"></tr>
+                            <tr id="book-status"></tr>
                             <tr sec:authorize="hasAuthority('ADMIN')" id="book-added-by"></tr>
                             <tr sec:authorize="hasAuthority('ADMIN')" id="book-added-at"></tr>
                             <tr sec:authorize="hasAuthority('ADMIN')" id="book-deleted-by"></tr>
