--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -103,3 +103,89 @@ main {
 .shadow {
     width: 100%;
 }
+
+
+.requests h4{
+    text-align: left;
+    margin-left: 40%;
+}
+
+.button-option {
+    outline: none;
+    background: none;
+    color: black;
+    border: 2px solid black;
+    text-transform: uppercase;
+    font-size: 16px;
+    transition: color 0.2s linear;
+    position: relative;
+}
+
+.button-option:hover {
+    outline: none;
+    color: white;
+    background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
+    border: 2px solid black;
+}
+
+.buton-submit {
+    outline: none;
+    background: none;
+    color: black;
+    border: 2px solid black;
+    text-transform: uppercase;
+    padding: 10px 30px;
+    min-width: 175px;
+    margin: 27px;
+    font-size: 16px;
+    transition: color 0.2s linear;
+    position: relative;
+}
+
+.buton-submit:hover {
+    outline: none;
+    color: white;
+    background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
+    border: 2px solid black;
+}
+
+.modal-footer {
+    justify-content: center;
+    padding: 0px;
+    border-top: 3px solid #708090;
+}
+
+.modal-header {
+    background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
+    justify-content: center;
+    padding: 2rem;
+}
+
+.modal-body {
+    padding: 2rem;
+}
+
+.h3, h3 {
+    font-size: 20px;
+}
+
+.alert {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.alert {
+    margin-bottom: 20px;
+}
+
+.page-item.active .page-link {
+    background-image: linear-gradient(to left, #e74c3c, #e67e22);
+    border: none;
+}
+.page-link {
+    color: black;
+}
+
+*, ::after, ::before{
+    justify-content: center;
+}
