--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -13,12 +13,15 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/chat.css}">
     <link rel="stylesheet" th:href="@{/css/book.css}">
+    <link sec:authorize="hasAuthority('ADMIN')" rel="stylesheet" type="text/css" th:href="@{/css/notification.css}">
+    <script th:src="@{/scripts/book.js}"></script>
 </head>
 <body>
 <main>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4" style="justify-content: space-between">
         <a href="/all-books"><img th:src="@{/images/logo.png}" alt="logo" height="60px" width="180px"/></a>
         <div class="dropdown">
+            <div class="notification" sec:authorize="hasAuthority('ADMIN')"></div>
             <button id="btn-upgrade" type="button" data-toggle="dropdown">
                 <div><span id="name" sec:authentication="principal.username"></span></div>
             </button>
@@ -201,16 +204,17 @@
                     <button class="button-submit" id="submit-update">Update Book</button>
                 </div>
             </div>
-
+        </div>
+    </div>
 </main>
 <!--Footer-->
 <div class="jumbotron text-center"></div>
 <!--Script-->
 <script th:src="@{/scripts/book.js}"></script>
-<div th:insert="allBooksPage :: chat-page">
-
-    <script th:src="@{/scripts/chat.js}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<div th:insert="allBooksPage :: chat-page"></div>
+<script sec:authorize="hasAuthority('ADMIN')" th:src="@{/scripts/notification.js}"></script>
+<script th:src="@{/scripts/chat.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </body>
 </html>
